--- a/src/overrides/config/Resonant Induction.cfg
+++ b/src/overrides/config/Resonant Induction.cfg
@@ -5,27 +5,37 @@
 ####################
 
 block {
+    I:accelerator=1245
     I:battery=1213
+    I:breaker=2711
     I:castingMold=1224
+    I:centrifuge=1234
+    I:chemicalExtractor=1237
+    I:controlRod=1239
     I:conveyorBelt=1204
     I:crate=1218
     I:detector=1206
     I:dust=1201
+    I:electricTurbine=1233
+    I:electromagnet=2707
     I:engineeringTable=1217
     I:filter=1227
     I:firebox=1221
+    I:fulmination=1246
+    I:funnel=1244
     I:generator=1215
     I:grate=1226
     I:grindingWheel=1209
     I:gutter=1225
     I:hotPlate=1222
     I:imprinter=1219
+    I:industrialStone=1200
     I:machineMaterial=1200
     I:manipulator=1205
     I:mechanicalPiston=1211
     I:millstone=1223
     I:mixer=1210
-    I:mixture_aluminium=1246
+    I:mixture_aluminium=2709
     I:mixture_aluminium_brass=3632
     I:mixture_aluminum=3638
     I:mixture_aluminum_brass=3821
@@ -36,7 +46,7 @@ block {
     I:mixture_cobalt=3676
     I:mixture_conductive_iron=3630
     I:mixture_copper=3658
-    I:mixture_cyanite=1248
+    I:mixture_cyanite=2710
     I:mixture_electrical_steel=3622
     I:mixture_electrum=1250
     I:mixture_electrum_flux=1236
@@ -49,7 +59,7 @@ block {
     I:mixture_graphite=3634
     I:mixture_invar=3648
     I:mixture_iridium=3680
-    I:mixture_iron=1242
+    I:mixture_iron=2706
     I:mixture_lead=3664
     I:mixture_manyullyn=1244
     I:mixture_meat=1230
@@ -71,7 +81,7 @@ block {
     I:mixture_uranium=3656
     I:mixture_vibrant_alloy=3670
     I:mixture_yellorium=1238
-    I:molten_aluminium=1245
+    I:molten_aluminium=2708
     I:molten_aluminium_brass=3633
     I:molten_aluminum=3639
     I:molten_aluminum_brass=3822
@@ -95,7 +105,7 @@ block {
     I:molten_graphite=3635
     I:molten_invar=3649
     I:molten_iridium=3681
-    I:molten_iron=1241
+    I:molten_iron=2705
     I:molten_lead=3665
     I:molten_manyullyn=1243
     I:molten_meat=1229
@@ -117,13 +127,26 @@ block {
     I:molten_uranium=3657
     I:molten_vibrant_alloy=3671
     I:molten_yellorium=1237
+    I:motor=1229
+    I:nuclearBoiler=1236
+    I:placer=2703
+    I:plasma=2704
+    I:plasmaHeater=1238
     I:pump=1208
+    I:quantumAssembler=1247
+    I:radioactive=1231
+    I:reactorCell=1235
+    I:refinedDust=2702
+    I:siren=1243
     I:solarPanel=1214
     I:sorter=1207
     I:tank=1228
     I:tesla=1212
+    I:thermometer=1240
     I:thermopile=1216
+    I:toxicWaste=1248
     I:turntable=1220
+    I:uraniumOre=1232
     I:waterTurbine=1203
     I:windTurbine=1202
 }
@@ -134,8 +157,11 @@ block {
 ####################
 
 enabled_list {
+    B:Enabled_biomass=true
     B:Enabled_charger=true
+    B:Enabled_devStaff=true
     B:Enabled_disk=true
+    B:Enabled_flour=true
     B:Enabled_gear=true
     B:Enabled_gearShaft=true
     B:Enabled_hammer=true
@@ -146,6 +172,7 @@ enabled_list {
     B:Enabled_pipe=true
     B:Enabled_quantumGlyph=true
     B:Enabled_transformer=true
+    B:Enabled_uranium=true
     B:Enabled_wire=true
 }
 
@@ -155,6 +182,7 @@ enabled_list {
 ####################
 
 general {
+    B:"Auto Disable Uranium If Exist"=false
     I:BlockIDPrefix=1200
     B:"Engineering Table Autocraft"=true
     I:ItemIDPrefix=20150
@@ -165,6 +193,29 @@ general {
     I:"Max EM Contractor Path"=200
     B:"Shiny silver Wires"=true
     B:"Tesla Sound FXs"=true
+    B:allowAlternateRecipes=true
+    B:allowIC2UraniumCompression=true
+    B:allowOreDictCompatibility=true
+    B:allowOreDictionaryCompatibility=true
+    B:allowRadioactiveOres=true
+    B:allowToxicWaste=true
+    B:allowTurbineStacking=true
+    D:darkMatterSpawnChance=0.2
+    I:deutermiumPerTritium=4
+    D:fissionBoilVolumeMultiplier=1.0
+    D:fulminationOutputMultiplier=1.0
+    D:grateDrainSpeedMultiplier=0.01
+    D:grateEffectMultiplier=5.0
+    I:mechanicalPistonBreakCount=5
+    I:mechanicalPistonMultiplier=2
+    I:plasmaHeatAmount=100
+    I:plasmaMaxTemperature=1000000
+    I:quantumAssemblerGenerateMode=1
+    I:quantumAssemblerRecipes <
+     >
+    D:turbineOutputMultiplier=1.0
+    I:uraniumHexaflourideRatio=200
+    I:waterPerDeutermium=4
 }
 
 
@@ -173,15 +224,30 @@ general {
 ####################
 
 item {
+    I:HazmatBody=20170
+    I:HazmatBoots=20172
+    I:HazmatBottom=20171
+    I:HazmatTop=20169
+    I:"Toxic Waste Bucket"=20183
+    I:antimatter=20179
+    I:biomass=20155
     I:bucketMixture=20153
     I:bucketMolten=20154
+    I:cellDeuterium=20175
+    I:cellEmpty=20173
+    I:cellTritium=20176
+    I:cellWater=20177
     I:charger=20161
+    I:darkMatter=20178
+    I:devStaff=20156
     I:disk=20163
+    I:flour=20157
     I:gear=20155
     I:gearShaft=20156
     I:hammer=20167
     I:handCrank=20165
     I:imprint=20166
+    I:insulation=31743
     I:levitator=20162
     I:multimeter=20159
     I:oreDust=20151
@@ -189,8 +255,32 @@ item {
     I:oreRubble=20150
     I:pipe=20157
     I:quantumGlyph=20164
+    I:rodBreederFuel=20180
+    I:rodFissileFuel=20174
     I:transformer=20160
+    I:uranium=20182
     I:wire=20158
+    I:yellowcake=20181
+}
+
+
+####################
+# ore_generation
+####################
+
+ore_generation {
+    B:"Generate Uranium Ore"=true
+}
+
+
+####################
+# power
+####################
+
+power {
+    I:Solor_Panel=50
+    I:Water_tubine_Ratio=1
+    I:Wind_tubine_Ratio=1
 }
 
 
@@ -247,6 +337,8 @@ resource_generator {
     B:"Enable Uranium"=true
     B:"Enable VibrantAlloy"=true
     B:"Enable Yellorium"=true
+    B:Enable_All=true
+    B:Enabled_All_Fluids=true
 }
 
 
