--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ steps:
           - apk add openjdk8-jre curl
           - ./mpt buildtwitch
           - ./mpt createmodlist HTML build/modlist.html
-          - mv build/testcraftp2-*-twitch.zip build/testcraftp2-twitch.zip
+          - mv build/testcraft-*-twitch.zip build/testcraft-twitch.zip
 
     - name: publish
       image: plugins/gitea-release
@@ -18,7 +18,7 @@ steps:
           note: CHANGELOG.md
           title: tag-${DRONE_TAG}
           files:
-              - build/testcraftp2-twitch.zip
+              - build/testcraft-twitch.zip
               - build/modlist.html
       when:
           event: tag
