--- a/src/overrides/config/hbm.cfg
+++ b/src/overrides/config/hbm.cfg
@@ -20,19 +20,19 @@
     B:1.04_enableOresInModdedDimensions=true
 
     # Allows landmines to generate
-    B:1.05_enableLandmineSpawn=true
+    B:1.05_enableLandmineSpawn=false
 
     # Allows radiation hotspots to generate
-    B:1.06_enableRadHotspotSpawn=true
+    B:1.06_enableRadHotspotSpawn=false
 
     # Allows chests to spawn at specific coordinates full of powders
-    B:1.07_enableNITANChestSpawn=true
+    B:1.07_enableNITANChestSpawn=false
 
     # Has bomber planes spawn in closer to the target for use with smaller render distances
     B:1.14_enableBomberShortMode=false
 
     # Allows locked safes to spawn
-    B:1.15_enableVaultSpawn=true
+    B:1.15_enableVaultSpawn=false
 
     # Causes satellites to fall whenever a mob dies
     B:1.17_enableCataclysm=false
@@ -1004,7 +1004,7 @@
     # When enabled, some uncraftable or more expansive items get simple crafting recipes. Scorched uranium also becomes washable
     B:LBSM_recipeSimpleCrafting=true
 
-    # When enabled, makes some medicine recipes (line ones that require bismuth) much more affordable
+    # When enabled, makes some medicine recipes (line ones that require bismuth) much more affordable/d/
     B:LBSM_recipeSimpleMedicine=true
 
     # When enabled, simplifies the recipe for tool sets like starmetal or scrhabidium
