--- a/src/overrides/config/GregTechAddon/DynamicConfig.cfg
+++ b/src/overrides/config/GregTechAddon/DynamicConfig.cfg
@@ -10906,267 +10906,267 @@ squeezer {
 
 
 storageblockcrafting {
-    B:blockAdamantium_false=false
-    B:blockAluminium_false=false
-    B:blockAmber_false=false
-    B:blockAmericium_false=false
-    B:blockAndesite_false=false
-    B:blockAntimony_false=false
-    B:blockApatite_false=false
-    B:blockArdite_false=false
-    B:blockArsenic_false=false
-    B:blockAsbestos_false=false
-    B:blockAstralSilver_false=false
-    B:blockBatteryAlloy_false=false
-    B:blockBeryllium_false=false
-    B:blockBlackSteel_false=false
-    B:blockBlueAlloy_false=false
-    B:blockBlueTopaz_false=false
-    B:blockBlutonium_false=false
-    B:blockBoron_false=false
-    B:blockBrass_false=false
-    B:blockBronze_false=false
-    B:blockCadmium_false=false
-    B:blockCaesium_false=false
-    B:blockCalcite_false=false
-    B:blockCalcium_false=false
-    B:blockCarbon_false=false
-    B:blockCerium_false=false
-    B:blockCertusQuartz_false=false
-    B:blockCharcoal_false=false
-    B:blockChimerite_false=false
-    B:blockChrome_false=false
-    B:blockClay_false=false
-    B:blockCoal_false=false
-    B:blockCobaltBrass_false=false
-    B:blockCobalt_false=false
-    B:blockCopper_false=false
-    B:blockCrystalFlux_false=false
-    B:blockCupronickel_false=false
-    B:blockCyanite_false=false
-    B:blockDamascusSteel_false=false
-    B:blockDeepIron_false=false
-    B:blockDesh_false=false
-    B:blockDiamond_false=false
-    B:blockDuranium_false=false
-    B:blockDysprosium_false=false
-    B:blockElectrotineAlloy_false=false
-    B:blockElectrumFlux_false=false
-    B:blockElectrum_false=false
-    B:blockEmerald_false=false
-    B:blockEnderium_false=false
-    B:blockEndstone_false=false
-    B:blockErbium_false=false
-    B:blockEuropium_false=false
-    B:blockEximite_false=false
-    B:blockFieryBlood_false=false
-    B:blockFluorite_false=false
-    B:blockForce_false=false
-    B:blockGadolinium_false=false
-    B:blockGarnetRed_false=false
-    B:blockGarnetYellow_false=false
-    B:blockGold_false=false
-    B:blockGraphite_false=false
-    B:blockGreenSapphire_false=false
-    B:blockGunpowder_false=false
-    B:blockHSLA_false=false
-    B:blockHolmium_false=false
-    B:blockIce_false=false
-    B:blockIndium_false=false
-    B:blockInfusedGold_false=false
-    B:blockInvar_false=false
-    B:blockIridium_false=false
-    B:blockIronWood_false=false
-    B:blockIron_false=false
-    B:blockKanthal_false=false
-    B:blockLanthanum_false=false
-    B:blockLapis_false=false
-    B:blockLazurite_false=false
-    B:blockLead_false=false
-    B:blockLithium_false=false
-    B:blockLutetium_false=false
-    B:blockMagnalium_false=false
-    B:blockMagnesium_false=false
-    B:blockMagnetite_false=false
-    B:blockManganese_false=false
-    B:blockMarble_false=false
-    B:blockMeatRaw_false=false
-    B:blockMeat_false=false
-    B:blockMeteoricIron_false=false
-    B:blockMeteoricSteel_false=false
-    B:blockMeutoite_false=false
-    B:blockMidasium_false=false
-    B:blockMimichite_false=false
-    B:blockMithril_false=false
-    B:blockMolybdenum_false=false
-    B:blockMoonstone_false=false
-    B:blockNaquadahAlloy_false=false
-    B:blockNaquadah_false=false
-    B:blockNeodymium_false=false
-    B:blockNetherBrick_false=false
-    B:blockNetherQuartz_false=false
-    B:blockNeutronium_false=false
-    B:blockNichrome_false=false
-    B:blockNickel_false=false
-    B:blockNikolite_false=false
-    B:blockNiobium_false=false
-    B:blockObsidian_false=false
-    B:blockOlivine_false=false
-    B:blockOsmiridium_false=false
-    B:blockOsmium_false=false
-    B:blockPalladium_false=false
-    B:blockPigIron_false=false
-    B:blockPlastic_false=false
-    B:blockPlatinum_false=false
-    B:blockPlutonium241_false=false
-    B:blockPlutonium_false=false
-    B:blockPraseodymium_false=false
-    B:blockPromethium_false=false
-    B:blockRedAlloy_false=false
-    B:blockRedstone_false=false
-    B:blockRefinedGlowstone_false=false
-    B:blockRefinedObsidian_false=false
-    B:blockRubber_false=false
-    B:blockRubidium_false=false
-    B:blockRuby_false=false
-    B:blockSalt_false=false
-    B:blockSaltpeter_false=false
-    B:blockSamarium_false=false
-    B:blockSand_false=false
-    B:blockSapphire_false=false
-    B:blockScandium_false=false
-    B:blockShadowIron_false=false
-    B:blockShadowSteel_false=false
-    B:blockSiliconDioxide_false=false
-    B:blockSilicon_false=false
-    B:blockSilver_false=false
-    B:blockSolderingAlloy_false=false
-    B:blockSoulSand_false=false
-    B:blockStainlessSteel_false=false
-    B:blockSteelLeaf_false=false
-    B:blockSteel_false=false
-    B:blockSulfur_false=false
-    B:blockSunnarium_false=false
-    B:blockSunstone_false=false
-    B:blockTantalum_false=false
-    B:blockTellurium_false=false
-    B:blockTerbium_false=false
-    B:blockThaumium_false=false
-    B:blockThorium_false=false
-    B:blockThulium_false=false
-    B:blockTin_false=false
-    B:blockTitanium_false=false
-    B:blockTritanium_false=false
-    B:blockTungstenSteel_false=false
-    B:blockTungsten_false=false
-    B:blockUltimet_false=false
-    B:blockUnstable_false=false
-    B:blockUranium235_false=false
-    B:blockUranium_false=false
-    B:blockVanadium_false=false
-    B:blockVinteum_false=false
-    B:blockVoid_false=false
-    B:blockWroughtIron_false=false
-    B:blockYellorium_false=false
-    B:blockYtterbium_false=false
-    B:blockYttrium_false=false
-    B:blockZinc_false=false
-    B:tile.glowstone_false=false
+    B:blockAdamantium_false=true
+    B:blockAluminium_false=true
+    B:blockAmber_false=true
+    B:blockAmericium_false=true
+    B:blockAndesite_false=true
+    B:blockAntimony_false=true
+    B:blockApatite_false=true
+    B:blockArdite_false=true
+    B:blockArsenic_false=true
+    B:blockAsbestos_false=true
+    B:blockAstralSilver_false=true
+    B:blockBatteryAlloy_false=true
+    B:blockBeryllium_false=true
+    B:blockBlackSteel_false=true
+    B:blockBlueAlloy_false=true
+    B:blockBlueTopaz_false=true
+    B:blockBlutonium_false=true
+    B:blockBoron_false=true
+    B:blockBrass_false=true
+    B:blockBronze_false=true
+    B:blockCadmium_false=true
+    B:blockCaesium_false=true
+    B:blockCalcite_false=true
+    B:blockCalcium_false=true
+    B:blockCarbon_false=true
+    B:blockCerium_false=true
+    B:blockCertusQuartz_false=true
+    B:blockCharcoal_false=true
+    B:blockChimerite_false=true
+    B:blockChrome_false=true
+    B:blockClay_false=true
+    B:blockCoal_false=true
+    B:blockCobaltBrass_false=true
+    B:blockCobalt_false=true
+    B:blockCopper_false=true
+    B:blockCrystalFlux_false=true
+    B:blockCupronickel_false=true
+    B:blockCyanite_false=true
+    B:blockDamascusSteel_false=true
+    B:blockDeepIron_false=true
+    B:blockDesh_false=true
+    B:blockDiamond_false=true
+    B:blockDuranium_false=true
+    B:blockDysprosium_false=true
+    B:blockElectrotineAlloy_false=true
+    B:blockElectrumFlux_false=true
+    B:blockElectrum_false=true
+    B:blockEmerald_false=true
+    B:blockEnderium_false=true
+    B:blockEndstone_false=true
+    B:blockErbium_false=true
+    B:blockEuropium_false=true
+    B:blockEximite_false=true
+    B:blockFieryBlood_false=true
+    B:blockFluorite_false=true
+    B:blockForce_false=true
+    B:blockGadolinium_false=true
+    B:blockGarnetRed_false=true
+    B:blockGarnetYellow_false=true
+    B:blockGold_false=true
+    B:blockGraphite_false=true
+    B:blockGreenSapphire_false=true
+    B:blockGunpowder_false=true
+    B:blockHSLA_false=true
+    B:blockHolmium_false=true
+    B:blockIce_false=true
+    B:blockIndium_false=true
+    B:blockInfusedGold_false=true
+    B:blockInvar_false=true
+    B:blockIridium_false=true
+    B:blockIronWood_false=true
+    B:blockIron_false=true
+    B:blockKanthal_false=true
+    B:blockLanthanum_false=true
+    B:blockLapis_false=true
+    B:blockLazurite_false=true
+    B:blockLead_false=true
+    B:blockLithium_false=true
+    B:blockLutetium_false=true
+    B:blockMagnalium_false=true
+    B:blockMagnesium_false=true
+    B:blockMagnetite_false=true
+    B:blockManganese_false=true
+    B:blockMarble_false=true
+    B:blockMeatRaw_false=true
+    B:blockMeat_false=true
+    B:blockMeteoricIron_false=true
+    B:blockMeteoricSteel_false=true
+    B:blockMeutoite_false=true
+    B:blockMidasium_false=true
+    B:blockMimichite_false=true
+    B:blockMithril_false=true
+    B:blockMolybdenum_false=true
+    B:blockMoonstone_false=true
+    B:blockNaquadahAlloy_false=true
+    B:blockNaquadah_false=true
+    B:blockNeodymium_false=true
+    B:blockNetherBrick_false=true
+    B:blockNetherQuartz_false=true
+    B:blockNeutronium_false=true
+    B:blockNichrome_false=true
+    B:blockNickel_false=true
+    B:blockNikolite_false=true
+    B:blockNiobium_false=true
+    B:blockObsidian_false=true
+    B:blockOlivine_false=true
+    B:blockOsmiridium_false=true
+    B:blockOsmium_false=true
+    B:blockPalladium_false=true
+    B:blockPigIron_false=true
+    B:blockPlastic_false=true
+    B:blockPlatinum_false=true
+    B:blockPlutonium241_false=true
+    B:blockPlutonium_false=true
+    B:blockPraseodymium_false=true
+    B:blockPromethium_false=true
+    B:blockRedAlloy_false=true
+    B:blockRedstone_false=true
+    B:blockRefinedGlowstone_false=true
+    B:blockRefinedObsidian_false=true
+    B:blockRubber_false=true
+    B:blockRubidium_false=true
+    B:blockRuby_false=true
+    B:blockSalt_false=true
+    B:blockSaltpeter_false=true
+    B:blockSamarium_false=true
+    B:blockSand_false=true
+    B:blockSapphire_false=true
+    B:blockScandium_false=true
+    B:blockShadowIron_false=true
+    B:blockShadowSteel_false=true
+    B:blockSiliconDioxide_false=true
+    B:blockSilicon_false=true
+    B:blockSilver_false=true
+    B:blockSolderingAlloy_false=true
+    B:blockSoulSand_false=true
+    B:blockStainlessSteel_false=true
+    B:blockSteelLeaf_false=true
+    B:blockSteel_false=true
+    B:blockSulfur_false=true
+    B:blockSunnarium_false=true
+    B:blockSunstone_false=true
+    B:blockTantalum_false=true
+    B:blockTellurium_false=true
+    B:blockTerbium_false=true
+    B:blockThaumium_false=true
+    B:blockThorium_false=true
+    B:blockThulium_false=true
+    B:blockTin_false=true
+    B:blockTitanium_false=true
+    B:blockTritanium_false=true
+    B:blockTungstenSteel_false=true
+    B:blockTungsten_false=true
+    B:blockUltimet_false=true
+    B:blockUnstable_false=true
+    B:blockUranium235_false=true
+    B:blockUranium_false=true
+    B:blockVanadium_false=true
+    B:blockVinteum_false=true
+    B:blockVoid_false=true
+    B:blockWroughtIron_false=true
+    B:blockYellorium_false=true
+    B:blockYtterbium_false=true
+    B:blockYttrium_false=true
+    B:blockZinc_false=true
+    B:tile.glowstone_false=true
 }
 
 
 storageblockdecrafting {
-    B:blockAluminium_false=false
+    B:blockAluminium_false=true
     B:blockAmber_true=true
-    B:blockAndesite_false=false
+    B:blockAndesite_false=true
     B:blockApatite_true=true
-    B:blockAsbestos_false=false
-    B:blockBeryllium_false=false
+    B:blockAsbestos_false=true
+    B:blockBeryllium_false=true
     B:blockBlueTopaz_true=true
-    B:blockBlutonium_false=false
-    B:blockBoron_false=false
-    B:blockBrass_false=false
-    B:blockBronze_false=false
-    B:blockCadmium_false=false
+    B:blockBlutonium_false=true
+    B:blockBoron_false=true
+    B:blockBrass_false=true
+    B:blockBronze_false=true
+    B:blockCadmium_false=true
     B:blockCalcite_true=true
-    B:blockCarbon_false=false
+    B:blockCarbon_false=true
     B:blockCertusQuartz_true=true
     B:blockCharcoal_true=true
     B:blockChimerite_true=true
-    B:blockChrome_false=false
+    B:blockChrome_false=true
     B:blockCoal_true=true
-    B:blockCobalt_false=false
-    B:blockCopper_false=false
+    B:blockCobalt_false=true
+    B:blockCopper_false=true
     B:blockCrystalFlux_true=true
-    B:blockCyanite_false=false
-    B:blockDesh_false=false
+    B:blockCyanite_false=true
+    B:blockDesh_false=true
     B:blockDiamond_true=true
-    B:blockElectrumFlux_false=false
-    B:blockElectrum_false=false
+    B:blockElectrumFlux_false=true
+    B:blockElectrum_false=true
     B:blockEmerald_true=true
-    B:blockEnderium_false=false
-    B:blockEndstone_false=false
+    B:blockEnderium_false=true
+    B:blockEndstone_false=true
     B:blockFluorite_true=true
     B:blockGarnetRed_true=true
     B:blockGarnetYellow_true=true
-    B:blockGold_false=false
-    B:blockGraphite_false=false
+    B:blockGold_false=true
+    B:blockGraphite_false=true
     B:blockGreenSapphire_true=true
-    B:blockGunpowder_false=false
-    B:blockHSLA_false=false
-    B:blockIce_false=false
-    B:blockInvar_false=false
+    B:blockGunpowder_false=true
+    B:blockHSLA_false=true
+    B:blockIce_false=true
+    B:blockInvar_false=true
     B:blockIridium_true=true
-    B:blockIron_false=false
-    B:blockLanthanum_false=false
+    B:blockIron_false=true
+    B:blockLanthanum_false=true
     B:blockLapis_true=true
     B:blockLazurite_true=true
-    B:blockLead_false=false
-    B:blockLithium_false=false
+    B:blockLead_false=true
+    B:blockLithium_false=true
     B:blockMagnetite_true=true
-    B:blockMarble_false=false
-    B:blockMeatRaw_false=false
-    B:blockMeat_false=false
-    B:blockMeteoricIron_false=false
+    B:blockMarble_false=true
+    B:blockMeatRaw_false=true
+    B:blockMeat_false=true
+    B:blockMeteoricIron_false=true
     B:blockMimichite_true=true
-    B:blockMithril_false=false
+    B:blockMithril_false=true
     B:blockMoonstone_true=true
     B:blockNetherQuartz_true=true
-    B:blockNickel_false=false
-    B:blockNikolite_false=false
-    B:blockNiobium_false=false
-    B:blockObsidian_false=false
+    B:blockNickel_false=true
+    B:blockNikolite_false=true
+    B:blockNiobium_false=true
+    B:blockObsidian_false=true
     B:blockOlivine_true=true
-    B:blockOsmium_false=false
-    B:blockPlastic_false=false
-    B:blockPlatinum_false=false
-    B:blockPlutonium_false=false
-    B:blockRedstone_false=false
-    B:blockRefinedGlowstone_false=false
-    B:blockRefinedObsidian_false=false
+    B:blockOsmium_false=true
+    B:blockPlastic_false=true
+    B:blockPlatinum_false=true
+    B:blockPlutonium_false=true
+    B:blockRedstone_false=true
+    B:blockRefinedGlowstone_false=true
+    B:blockRefinedObsidian_false=true
     B:blockRuby_true=true
-    B:blockSalt_false=false
-    B:blockSaltpeter_false=false
-    B:blockSand_false=false
+    B:blockSalt_false=true
+    B:blockSaltpeter_false=true
+    B:blockSand_false=true
     B:blockSapphire_true=true
-    B:blockSiliconDioxide_false=false
-    B:blockSilver_false=false
-    B:blockSoulSand_false=false
-    B:blockSteel_false=false
-    B:blockSulfur_false=false
+    B:blockSiliconDioxide_false=true
+    B:blockSilver_false=true
+    B:blockSoulSand_false=true
+    B:blockSteel_false=true
+    B:blockSulfur_false=true
     B:blockSunstone_true=true
     B:blockTantalum_true=true
-    B:blockThaumium_false=false
-    B:blockThorium_false=false
-    B:blockTin_false=false
-    B:blockTitanium_false=false
-    B:blockTungsten_false=false
-    B:blockUnstable_false=false
-    B:blockUranium235_false=false
-    B:blockUranium_false=false
+    B:blockThaumium_false=true
+    B:blockThorium_false=true
+    B:blockTin_false=true
+    B:blockTitanium_false=true
+    B:blockTungsten_false=true
+    B:blockUnstable_false=true
+    B:blockUranium235_false=true
+    B:blockUranium_false=true
     B:blockVinteum_true=true
-    B:blockYellorium_false=false
-    B:blockZinc_false=false
+    B:blockYellorium_false=true
+    B:blockZinc_false=true
 }
 
 
