--- a/src/overrides/config/hbm.cfg
+++ b/src/overrides/config/hbm.cfg
@@ -608,7 +608,7 @@
     B:12.D00_enableDucks=false
 
     # Whether zombies and skeletons should have additional gear when spawning
-    B:12.D01_enableMobGear=true
+    B:12.D01_enableMobGear=false
 
     # Whether there should be radiation elementals
     B:12.E00_enableMeltdownElementals=true
@@ -901,13 +901,13 @@
 
 17_biomes {
     # The numeric ID for the crater biome
-    I:17.B00_craterBiomeId=80
+    I:17.B00_craterBiomeId=90
 
     # The numeric ID for the inner crater biome
-    I:17.B01_craterBiomeInnerId=81
+    I:17.B01_craterBiomeInnerId=91
 
     # The numeric ID for the outer crater biome
-    I:17.B02_craterBiomeOuterId=82
+    I:17.B02_craterBiomeOuterId=92
 
     # Enables the biome change caused by nuclear explosions
     B:17.B_toggle=true
