--- a/src/overrides/config/GregTechAddon/DynamicConfig.cfg
+++ b/src/overrides/config/GregTechAddon/DynamicConfig.cfg
@@ -6864,207 +6864,207 @@ rcblastfurnace {
 
 
 recipereplacements {
-    B:Bronze.Axe_true=true
-    B:Bronze.Boots_true=true
-    B:Bronze.ChestPlate_true=true
-    B:Bronze.Helmet_true=true
-    B:Bronze.Hoe_true=true
-    B:Bronze.Pants_true=true
-    B:Bronze.Pickaxe_true=true
-    B:Bronze.Shears_true=true
-    B:Bronze.Shovel_true=true
-    B:Bronze.Sickle_true=true
-    B:Bronze.Sword_true=true
-    B:Cobalt.Axe_true=true
-    B:Cobalt.Boots_true=true
-    B:Cobalt.ChestPlate_true=true
-    B:Cobalt.Helmet_true=true
-    B:Cobalt.Hoe_true=true
-    B:Cobalt.Pants_true=true
-    B:Cobalt.Pickaxe_true=true
-    B:Cobalt.Shovel_true=true
-    B:Cobalt.Sword_true=true
-    B:Copper.Axe_true=true
-    B:Copper.Boots_true=true
-    B:Copper.ChestPlate_true=true
-    B:Copper.Helmet_true=true
-    B:Copper.Hoe_true=true
-    B:Copper.Pants_true=true
-    B:Copper.Pickaxe_true=true
-    B:Copper.Shears_true=true
-    B:Copper.Shovel_true=true
-    B:Copper.Sickle_true=true
-    B:Copper.Sword_true=true
-    B:Electrum.Axe_true=true
-    B:Electrum.Boots_true=true
-    B:Electrum.ChestPlate_true=true
-    B:Electrum.Helmet_true=true
-    B:Electrum.Hoe_true=true
-    B:Electrum.Pants_true=true
-    B:Electrum.Pickaxe_true=true
-    B:Electrum.Shears_true=true
-    B:Electrum.Shovel_true=true
-    B:Electrum.Sickle_true=true
-    B:Electrum.Sword_true=true
-    B:Gold.Axe_true=true
-    B:Gold.Boots_true=true
-    B:Gold.ChestPlate_true=true
-    B:Gold.Helmet_true=true
-    B:Gold.Hoe_true=true
-    B:Gold.Pants_true=true
-    B:Gold.Pickaxe_true=true
-    B:Gold.PressurePlate_true=true
-    B:Gold.Shears_true=true
-    B:Gold.Shovel_true=true
-    B:Gold.Sickle_true=true
-    B:Gold.Sword_true=true
-    B:Invar.Axe_true=true
-    B:Invar.Boots_true=true
-    B:Invar.ChestPlate_true=true
-    B:Invar.Helmet_true=true
-    B:Invar.Hoe_true=true
-    B:Invar.Pants_true=true
-    B:Invar.Pickaxe_true=true
-    B:Invar.Shears_true=true
-    B:Invar.Shovel_true=true
-    B:Invar.Sickle_true=true
-    B:Invar.Sword_true=true
-    B:Iron.Axe_true=true
-    B:Iron.Bars_true=true
-    B:Iron.Boots_true=true
-    B:Iron.Bucket_true=true
-    B:Iron.Cauldron_true=true
-    B:Iron.ChestPlate_true=true
-    B:Iron.Door_true=true
-    B:Iron.Helmet_true=true
-    B:Iron.Hoe_true=true
-    B:Iron.Hopper_true=true
-    B:Iron.Minecart_true=true
-    B:Iron.Pants_true=true
-    B:Iron.Pickaxe_true=true
-    B:Iron.PressurePlate_true=true
-    B:Iron.Shears_true=true
-    B:Iron.Shovel_true=true
-    B:Iron.Sickle_true=true
-    B:Iron.Spear_true=true
-    B:Iron.Sword_true=true
-    B:Lead.Axe_true=true
-    B:Lead.Boots_true=true
-    B:Lead.ChestPlate_true=true
-    B:Lead.Helmet_true=true
-    B:Lead.Hoe_true=true
-    B:Lead.Pants_true=true
-    B:Lead.Pickaxe_true=true
-    B:Lead.Shears_true=true
-    B:Lead.Shovel_true=true
-    B:Lead.Sickle_true=true
-    B:Lead.Sword_true=true
-    B:Nickel.Axe_true=true
-    B:Nickel.Boots_true=true
-    B:Nickel.ChestPlate_true=true
-    B:Nickel.Helmet_true=true
-    B:Nickel.Hoe_true=true
-    B:Nickel.Pants_true=true
-    B:Nickel.Pickaxe_true=true
-    B:Nickel.Shears_true=true
-    B:Nickel.Shovel_true=true
-    B:Nickel.Sickle_true=true
-    B:Nickel.Sword_true=true
-    B:Osmium.Axe_true=true
-    B:Osmium.Boots_true=true
-    B:Osmium.ChestPlate_true=true
-    B:Osmium.Helmet_true=true
-    B:Osmium.Hoe_true=true
-    B:Osmium.Pants_true=true
-    B:Osmium.Pickaxe_true=true
-    B:Osmium.Shovel_true=true
-    B:Osmium.Sword_true=true
-    B:Platinum.Axe_true=true
-    B:Platinum.Boots_true=true
-    B:Platinum.ChestPlate_true=true
-    B:Platinum.Helmet_true=true
-    B:Platinum.Hoe_true=true
-    B:Platinum.Pants_true=true
-    B:Platinum.Pickaxe_true=true
-    B:Platinum.Shears_true=true
-    B:Platinum.Shovel_true=true
-    B:Platinum.Sickle_true=true
-    B:Platinum.Sword_true=true
-    B:RefinedGlowstone.Axe_true=true
-    B:RefinedGlowstone.Boots_true=true
-    B:RefinedGlowstone.ChestPlate_true=true
-    B:RefinedGlowstone.Helmet_true=true
-    B:RefinedGlowstone.Hoe_true=true
-    B:RefinedGlowstone.Pants_true=true
-    B:RefinedGlowstone.Pickaxe_true=true
-    B:RefinedGlowstone.Shovel_true=true
-    B:RefinedGlowstone.Sword_true=true
-    B:RefinedObsidian.Axe_true=true
-    B:RefinedObsidian.Boots_true=true
-    B:RefinedObsidian.ChestPlate_true=true
-    B:RefinedObsidian.Helmet_true=true
-    B:RefinedObsidian.Hoe_true=true
-    B:RefinedObsidian.Pants_true=true
-    B:RefinedObsidian.Pickaxe_true=true
-    B:RefinedObsidian.Shovel_true=true
-    B:RefinedObsidian.Sword_true=true
-    B:Rubber.Sheet_true=true
-    B:Silver.Axe_true=true
-    B:Silver.Boots_true=true
-    B:Silver.ChestPlate_true=true
-    B:Silver.Helmet_true=true
-    B:Silver.Hoe_true=true
-    B:Silver.Knive_true=true
-    B:Silver.Pants_true=true
-    B:Silver.Pickaxe_true=true
-    B:Silver.Shears_true=true
-    B:Silver.Shovel_true=true
-    B:Silver.Sickle_true=true
-    B:Silver.Sword_true=true
-    B:Steel.Axe_true=true
-    B:Steel.Boots_true=true
-    B:Steel.ChestPlate_true=true
-    B:Steel.Helmet_true=true
-    B:Steel.Hoe_true=true
-    B:Steel.Pants_true=true
-    B:Steel.Pickaxe_true=true
-    B:Steel.Shears_true=true
-    B:Steel.Shovel_true=true
-    B:Steel.Sword_true=true
-    B:Thaumium.Axe_true=true
-    B:Thaumium.Boots_true=true
-    B:Thaumium.ChestPlate_true=true
-    B:Thaumium.Helmet_true=true
-    B:Thaumium.Hoe_true=true
-    B:Thaumium.Pants_true=true
-    B:Thaumium.Pickaxe_true=true
-    B:Thaumium.Shovel_true=true
-    B:Thaumium.Sword_true=true
-    B:Tin.Axe_true=true
-    B:Tin.Boots_true=true
-    B:Tin.ChestPlate_true=true
-    B:Tin.Helmet_true=true
-    B:Tin.Hoe_true=true
-    B:Tin.Pants_true=true
-    B:Tin.Pickaxe_true=true
-    B:Tin.Shears_true=true
-    B:Tin.Shovel_true=true
-    B:Tin.Sickle_true=true
-    B:Tin.Sword_true=true
-    B:Titanium.Axe_true=true
-    B:Titanium.Boots_true=true
-    B:Titanium.ChestPlate_true=true
-    B:Titanium.Helmet_true=true
-    B:Titanium.Hoe_true=true
-    B:Titanium.Pants_true=true
-    B:Titanium.Pickaxe_true=true
-    B:Titanium.Shovel_true=true
-    B:Titanium.Sword_true=true
-    B:TungstenSteel.Axe_true=true
-    B:TungstenSteel.Hoe_true=true
-    B:TungstenSteel.Pickaxe_true=true
-    B:TungstenSteel.Shovel_true=true
-    B:TungstenSteel.Sword_true=true
+    B:Bronze.Axe_true=false
+    B:Bronze.Boots_true=false
+    B:Bronze.ChestPlate_true=false
+    B:Bronze.Helmet_true=false
+    B:Bronze.Hoe_true=false
+    B:Bronze.Pants_true=false
+    B:Bronze.Pickaxe_true=false
+    B:Bronze.Shears_true=false
+    B:Bronze.Shovel_true=false
+    B:Bronze.Sickle_true=false
+    B:Bronze.Sword_true=false
+    B:Cobalt.Axe_true=false
+    B:Cobalt.Boots_true=false
+    B:Cobalt.ChestPlate_true=false
+    B:Cobalt.Helmet_true=false
+    B:Cobalt.Hoe_true=false
+    B:Cobalt.Pants_true=false
+    B:Cobalt.Pickaxe_true=false
+    B:Cobalt.Shovel_true=false
+    B:Cobalt.Sword_true=false
+    B:Copper.Axe_true=false
+    B:Copper.Boots_true=false
+    B:Copper.ChestPlate_true=false
+    B:Copper.Helmet_true=false
+    B:Copper.Hoe_true=false
+    B:Copper.Pants_true=false
+    B:Copper.Pickaxe_true=false
+    B:Copper.Shears_true=false
+    B:Copper.Shovel_true=false
+    B:Copper.Sickle_true=false
+    B:Copper.Sword_true=false
+    B:Electrum.Axe_true=false
+    B:Electrum.Boots_true=false
+    B:Electrum.ChestPlate_true=false
+    B:Electrum.Helmet_true=false
+    B:Electrum.Hoe_true=false
+    B:Electrum.Pants_true=false
+    B:Electrum.Pickaxe_true=false
+    B:Electrum.Shears_true=false
+    B:Electrum.Shovel_true=false
+    B:Electrum.Sickle_true=false
+    B:Electrum.Sword_true=false
+    B:Gold.Axe_true=false
+    B:Gold.Boots_true=false
+    B:Gold.ChestPlate_true=false
+    B:Gold.Helmet_true=false
+    B:Gold.Hoe_true=false
+    B:Gold.Pants_true=false
+    B:Gold.Pickaxe_true=false
+    B:Gold.PressurePlate_true=false
+    B:Gold.Shears_true=false
+    B:Gold.Shovel_true=false
+    B:Gold.Sickle_true=false
+    B:Gold.Sword_true=false
+    B:Invar.Axe_true=false
+    B:Invar.Boots_true=false
+    B:Invar.ChestPlate_true=false
+    B:Invar.Helmet_true=false
+    B:Invar.Hoe_true=false
+    B:Invar.Pants_true=false
+    B:Invar.Pickaxe_true=false
+    B:Invar.Shears_true=false
+    B:Invar.Shovel_true=false
+    B:Invar.Sickle_true=false
+    B:Invar.Sword_true=false
+    B:Iron.Axe_true=false
+    B:Iron.Bars_true=false
+    B:Iron.Boots_true=false
+    B:Iron.Bucket_true=false
+    B:Iron.Cauldron_true=false
+    B:Iron.ChestPlate_true=false
+    B:Iron.Door_true=false
+    B:Iron.Helmet_true=false
+    B:Iron.Hoe_true=false
+    B:Iron.Hopper_true=false
+    B:Iron.Minecart_true=false
+    B:Iron.Pants_true=false
+    B:Iron.Pickaxe_true=false
+    B:Iron.PressurePlate_true=false
+    B:Iron.Shears_true=false
+    B:Iron.Shovel_true=false
+    B:Iron.Sickle_true=false
+    B:Iron.Spear_true=false
+    B:Iron.Sword_true=false
+    B:Lead.Axe_true=false
+    B:Lead.Boots_true=false
+    B:Lead.ChestPlate_true=false
+    B:Lead.Helmet_true=false
+    B:Lead.Hoe_true=false
+    B:Lead.Pants_true=false
+    B:Lead.Pickaxe_true=false
+    B:Lead.Shears_true=false
+    B:Lead.Shovel_true=false
+    B:Lead.Sickle_true=false
+    B:Lead.Sword_true=false
+    B:Nickel.Axe_true=false
+    B:Nickel.Boots_true=false
+    B:Nickel.ChestPlate_true=false
+    B:Nickel.Helmet_true=false
+    B:Nickel.Hoe_true=false
+    B:Nickel.Pants_true=false
+    B:Nickel.Pickaxe_true=false
+    B:Nickel.Shears_true=false
+    B:Nickel.Shovel_true=false
+    B:Nickel.Sickle_true=false
+    B:Nickel.Sword_true=false
+    B:Osmium.Axe_true=false
+    B:Osmium.Boots_true=false
+    B:Osmium.ChestPlate_true=false
+    B:Osmium.Helmet_true=false
+    B:Osmium.Hoe_true=false
+    B:Osmium.Pants_true=false
+    B:Osmium.Pickaxe_true=false
+    B:Osmium.Shovel_true=false
+    B:Osmium.Sword_true=false
+    B:Platinum.Axe_true=false
+    B:Platinum.Boots_true=false
+    B:Platinum.ChestPlate_true=false
+    B:Platinum.Helmet_true=false
+    B:Platinum.Hoe_true=false
+    B:Platinum.Pants_true=false
+    B:Platinum.Pickaxe_true=false
+    B:Platinum.Shears_true=false
+    B:Platinum.Shovel_true=false
+    B:Platinum.Sickle_true=false
+    B:Platinum.Sword_true=false
+    B:RefinedGlowstone.Axe_true=false
+    B:RefinedGlowstone.Boots_true=false
+    B:RefinedGlowstone.ChestPlate_true=false
+    B:RefinedGlowstone.Helmet_true=false
+    B:RefinedGlowstone.Hoe_true=false
+    B:RefinedGlowstone.Pants_true=false
+    B:RefinedGlowstone.Pickaxe_true=false
+    B:RefinedGlowstone.Shovel_true=false
+    B:RefinedGlowstone.Sword_true=false
+    B:RefinedObsidian.Axe_true=false
+    B:RefinedObsidian.Boots_true=false
+    B:RefinedObsidian.ChestPlate_true=false
+    B:RefinedObsidian.Helmet_true=false
+    B:RefinedObsidian.Hoe_true=false
+    B:RefinedObsidian.Pants_true=false
+    B:RefinedObsidian.Pickaxe_true=false
+    B:RefinedObsidian.Shovel_true=false
+    B:RefinedObsidian.Sword_true=false
+    B:Rubber.Sheet_true=false
+    B:Silver.Axe_true=false
+    B:Silver.Boots_true=false
+    B:Silver.ChestPlate_true=false
+    B:Silver.Helmet_true=false
+    B:Silver.Hoe_true=false
+    B:Silver.Knive_true=false
+    B:Silver.Pants_true=false
+    B:Silver.Pickaxe_true=false
+    B:Silver.Shears_true=false
+    B:Silver.Shovel_true=false
+    B:Silver.Sickle_true=false
+    B:Silver.Sword_true=false
+    B:Steel.Axe_true=false
+    B:Steel.Boots_true=false
+    B:Steel.ChestPlate_true=false
+    B:Steel.Helmet_true=false
+    B:Steel.Hoe_true=false
+    B:Steel.Pants_true=false
+    B:Steel.Pickaxe_true=false
+    B:Steel.Shears_true=false
+    B:Steel.Shovel_true=false
+    B:Steel.Sword_true=false
+    B:Thaumium.Axe_true=false
+    B:Thaumium.Boots_true=false
+    B:Thaumium.ChestPlate_true=false
+    B:Thaumium.Helmet_true=false
+    B:Thaumium.Hoe_true=false
+    B:Thaumium.Pants_true=false
+    B:Thaumium.Pickaxe_true=false
+    B:Thaumium.Shovel_true=false
+    B:Thaumium.Sword_true=false
+    B:Tin.Axe_true=false
+    B:Tin.Boots_true=false
+    B:Tin.ChestPlate_true=false
+    B:Tin.Helmet_true=false
+    B:Tin.Hoe_true=false
+    B:Tin.Pants_true=false
+    B:Tin.Pickaxe_true=false
+    B:Tin.Shears_true=false
+    B:Tin.Shovel_true=false
+    B:Tin.Sickle_true=false
+    B:Tin.Sword_true=false
+    B:Titanium.Axe_true=false
+    B:Titanium.Boots_true=false
+    B:Titanium.ChestPlate_true=false
+    B:Titanium.Helmet_true=false
+    B:Titanium.Hoe_true=false
+    B:Titanium.Pants_true=false
+    B:Titanium.Pickaxe_true=false
+    B:Titanium.Shovel_true=false
+    B:Titanium.Sword_true=false
+    B:TungstenSteel.Axe_true=false
+    B:TungstenSteel.Hoe_true=false
+    B:TungstenSteel.Pickaxe_true=false
+    B:TungstenSteel.Shovel_true=false
+    B:TungstenSteel.Sword_true=false
 }
 
 
