--- a/src/overrides/config/hbm.cfg
+++ b/src/overrides/config/hbm.cfg
@@ -608,7 +608,7 @@
     B:12.D00_enableDucks=false
 
     # Whether zombies and skeletons should have additional gear when spawning
-    B:12.D01_enableMobGear=false
+    B:12.D01_enableMobGear=true
 
     # Whether there should be radiation elementals
     B:12.E00_enableMeltdownElementals=true
@@ -751,7 +751,7 @@
     D:12.I02_baseInfestChance=5.0
 
     # Whether mask man should spawn
-    B:12.M00_enableMaskman=false
+    B:12.M00_enableMaskman=true
 
     # How many world ticks need to pass for a check to be performed
     I:12.M01_maskmanDelay=216000
@@ -871,7 +871,7 @@
 
 16_pollution {
     # If disabled, none of the polltuion related things will work
-    B:POL_00_enablePollution=true
+    B:POL_00_enablePollution=false
 
     # Whether breaking blocks in heavy metal polluted areas will poison the player
     B:POL_01_enableLeadFromBlocks=true
@@ -1004,7 +1004,7 @@
     # When enabled, some uncraftable or more expansive items get simple crafting recipes. Scorched uranium also becomes washable
     B:LBSM_recipeSimpleCrafting=true
 
-    # When enabled, makes some medicine recipes (line ones that require bismuth) much more affordable/d/
+    # When enabled, makes some medicine recipes (line ones that require bismuth) much more affordable
     B:LBSM_recipeSimpleMedicine=true
 
     # When enabled, simplifies the recipe for tool sets like starmetal or scrhabidium
