feat: no prefilled tanks

--- a/src/overrides/config/Mekanism.cfg
+++ b/src/overrides/config/Mekanism.cfg
@@ -3,16 +3,20 @@
 client {
     I:AmbientLightingLevel=15
     B:CTMRenderer=true
+    B:DoMultiblockSparkle=true
     B:EnableAmbientLighting=true
     B:EnableMachineSounds=true
     B:EnablePlayerSounds=true
     B:Holidays=true
     B:MachineEffects=true
+    S:ModelType=MODERN
+    I:MultiblockSparkleIntesity=6
     B:OldTransmitterRender=false
     B:OpaqueTransmitterRender=false
 
     # If true, will reduce lagging between player sounds. Setting to false will reduce GC load
     B:ReplaceSoundsWhenResuming=true
+    B:SmallPipeFluid=false
     D:SoundVolume=1.0
 }
 
@@ -33,6 +37,10 @@ general {
     I:DisassemblerEnergyUsage=10
     B:DynamicTankEasterEgg=false
     D:EUToJoules=0.1
+    I:ElementizerFailChanceMultiplier=1
+    B:EnableDiamondCompat=true
+    B:EnablePoorOresCompat=true
+    B:EnableQuartzCompat=true
     B:EnableWorldRegeneration=false
     D:EnergyPerHeat=1000.0
     D:EnergyPerRedstone=10000.0
@@ -57,22 +65,26 @@ general {
     I:MaxPlenisherNodes=4000
     I:MaxPumpRange=80
     I:MaxScubaGas=24000
+    I:MethaneBurnTime=10
     I:MinerSilkMultiplier=6
     I:ObsidianTNTBlastRadius=12
     I:ObsidianTNTDelay=100
     B:OpsBypassRestrictions=false
+    B:OreDictOsmium=true
+    B:OreDictPlatinum=false
     I:OsmiumPerChunk=12
-    B:PrefilledFluidTanks=true
-    B:PrefilledGasTanks=true
+    B:PrefilledFluidTanks=false
+    B:PrefilledGasTanks=false
     B:PumpWaterSources=false
     D:RFToJoules=0.4
     I:SaltPerChunk=2
-    B:SpawnBabySkeletons=true
+    B:SpawnBabySkeletons=false
     D:SuperheatingHeatTransfer=10000.0
     S:"Temperature Units"=K
     D:ThermalEvaporationSpeed=1.0
     I:TinPerChunk=0
     B:UpdateNotifications=true
+    B:UpdateNotificationsv2=true
     I:UpgradeModifier=10
     I:VoicePort=36123
     B:VoiceServerEnabled=true
@@ -84,6 +96,7 @@ generation {
     D:AdvancedSolarGeneration=300.0
     D:BioGeneration=350.0
     D:HeatGeneration=150.0
+    I:HeatGenerationFluidRate=10
     D:HeatGenerationLava=5.0
     D:HeatGenerationNether=100.0
     D:SolarGeneration=50.0
@@ -135,6 +148,7 @@ machines {
     B:SeismicVibratorEnabled=true
     B:SolarNeutronActivatorEnabled=true
     B:TeleporterEnabled=true
+    B:TheoreticalElementizerEnabled=true
 }
 
 
@@ -427,7 +441,7 @@ tools {
     }
 
     general {
-        D:MobArmorSpawnRate=0.03
+        D:MobArmorSpawnRate=0.00
     }
 
 }
