--- a/src/overrides/config/hbm.cfg
+++ b/src/overrides/config/hbm.cfg
@@ -608,7 +608,7 @@
     B:12.D00_enableDucks=false
 
     # Whether zombies and skeletons should have additional gear when spawning
-    B:12.D01_enableMobGear=true
+    B:12.D01_enableMobGear=false
 
     # Whether there should be radiation elementals
     B:12.E00_enableMeltdownElementals=true
